@@ -1,3 +1,13 @@
+2009-07-28  Andre Pedralho  <andre.pedralho@openbossa.org>
+
+         Reviewed by Simon Hausmann.
+
+         Fixed tst_QWebFrame::hasSetFocus test which was using
+         an undefined resource.
+         https://bugs.webkit.org/show_bug.cgi?id=27512
+
+         * tests/qwebframe/tst_qwebframe.cpp:
+
 2009-07-28  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Reviewed by Ariya Hidayat.
